@@ -1,1 +1,23 @@
 # GMC
+OOAD Project, Grocery Management System
+
+
+---
+
+### Download javafx sdk version 17
+### Place the extracted folder in the same directory as the code, the folder should have the name like javafx-sdk-17
+### Make sure the java you installed is same version as javafx, i.e. 17
+### If not, install version 17 first
+
+---
+
+
+### Execute these commands, respectively;
+
+javac --module-path your/path/to/directory/javafx-sdk-17.0.15/lib --add-modules javafx.controls GMC.java
+
+java --module-path your/path/to/directory/javafx-sdk-17.0.15/lib --add-modules javafx.controls GMC
+
+### These commands should work on cmd as well. If not, please search on google or gpt.
+
+---
